# gis-data-manager

./: .gitignore  README.md  docker-compose.yml  project-design.md  skills-lock.json
gis-data-manager/: .gitignore  README.md  index.html  package.json  vite.config.js
gis-data-manager/src/: App.vue  main.js
gis-data-manager/src-tauri/: Cargo.toml  init-postgis.sql  tauri.conf.json
gis-data-manager/src-tauri/src/: db_init.rs  lib.rs  main.rs  shapefile_import.rs
gis-data-manager/src-tauri/src/api/: connection.rs  data_source.rs  dict.rs  geozero_import.rs  import.rs  mod.rs  service.rs  settings.rs  tools.rs
gis-data-manager/src/api/: chat.js  dataSource.js  dict.js  gisTools.js  import.js  service.js  settings.js
gis-data-manager/src/assets/: main.css
gis-data-manager/src/components/: AppConfirm.js  AppModal.vue  AppTable.vue  AppToast.js
gis-data-manager/src/router/: index.js
gis-data-manager/src/views/: Dashboard.vue  DashboardStats.vue  DataManagement.vue  DataSources.vue  GISTools.vue  HomeChat.vue  ServiceRegistry.vue  Settings.vue
homepage/: index.html
