[package]
name = "gis-data-manager"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "gis_data_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "mysql", "sqlite"] }
tokio-postgres = { version = "0.7", features = ["runtime", "with-serde_json-1", "with-chrono-0_4"] }
postgres-types = "0.2"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["full"] }
url = "2"
hmac = "0.12"
sha2 = "0.10"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
minio = { version = "0.4", default-features = false, features = ["rustls-tls", "localhost", "default-crypto"] }
shapefile = "0.6"
geozero = { version = "0.15.1", features = ["with-geojson", "with-geo", "with-shp"] }
geo-types = "0.7"
flatgeobuf = "6"
byteorder = "1"
flate2 = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
